networkpolicy/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: network-policy-demo
  labels:
    app: test
spec:
  containers:
    - name: test
      image: nginx
