networkpolicy/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: network-policy-demo
  labels:
    app: web
spec:
  containers:
    - name: web
      image: nginx
